--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,24 @@
   </head>
   <body>
     <h1>MY PAGE</h1>
+
+    <!-- responsive circle with state changes -->
+    <!-- warning if different value for the same property is used -->
+    <div
+      class="bg-black hover:bg-red-500 size-10 sm:size-20 lg:max-xl:size-40 m-10 rounded-full"
+    ></div>
+
+    <div
+      class="m-5 before:inline-block before:bg-green-200 before:rounded-full before:size-4"
+    >
+      text with circle before
+    </div>
+    <div class="m-5">
+      <span
+        class="inline-block bg-green-200 rounded-full size-4"
+        aria-hidden="true"
+      ></span>
+      text with circle before 2
+    </div>
   </body>
 </html>
