add prettier plugin to tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,17 +12,17 @@
     <!-- responsive circle with state changes -->
     <!-- warning if different value for the same property is used -->
     <div
-      class="bg-black hover:bg-red-500 size-10 sm:size-20 lg:max-xl:size-40 m-10 rounded-full"
+      class="m-10 size-10 rounded-full bg-black hover:bg-red-500 sm:size-20 lg:max-xl:size-40"
     ></div>
 
     <div
-      class="m-5 before:inline-block before:bg-green-200 before:rounded-full before:size-4"
+      class="m-5 before:inline-block before:size-4 before:rounded-full before:bg-green-200"
     >
       text with circle before
     </div>
     <div class="m-5">
       <span
-        class="inline-block bg-green-200 rounded-full size-4"
+        class="inline-block size-4 rounded-full bg-green-200"
         aria-hidden="true"
       ></span>
       text with circle before 2
